SonarQube code cleanup.